@@ -269,9 +269,9 @@ endif
 binary: binary-indep binary-arch
 
 update-archs:
-	sed -i -e "s/libacl1-dev \(([^)]\+)\) \[[^]]\+\]/libacl1-dev \1 [`type-handling any linux-gnu`]/g" \
-	       -e "s/libkeyutils-dev \(([^)]\+)\) \[[^]]\+\]/libkeyutils-dev \1 [`type-handling any linux-gnu`]/g" \
-	       -e "s/libcap2-dev \(([^)]\+)\) \[[^]]\+\]/libcap2-dev \1 [`type-handling any linux-gnu`]/g" \
+	sed -i -e "s/libacl1-dev\( ([^)]\+)\)* \[[^]]\+\]/libacl1-dev \1 [`type-handling any linux-gnu`]/g" \
+	       -e "s/libkeyutils-dev\( ([^)]\+)\)* \[[^]]\+\]/libkeyutils-dev \1 [`type-handling any linux-gnu`]/g" \
+	       -e "s/libcap2-dev\( ([^)]\+)\)* \[[^]]\+\]/libcap2-dev \1 [`type-handling any linux-gnu`]/g" \
 		debian/control
 
 .PHONY: build clean binary-indep binary-arch binary install configure patch unpatch update-archs
